[package]
name = "lilac-cli"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2021"
description = "LILAC playback and transcoding utility"
license = "MIT"
rust-version = "1.81"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
glob = "0.3.1"
lilac = { path = "..", features = ["conversion"]}
miette = { version = "7.2.0", features = ["fancy"] }
ratatui = "0.28.1"
rayon = "1.10.0"
rodio = { version = "0.19.0", default-features = false }
